LLM2.0 Stage 2: Finish webpage and short term memory management

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -4,7 +4,7 @@ WORKDIR /app
 
 COPY pyproject.toml uv.lock ./
 
-RUN pip install uv
+RUN pip install --no-cache-dir uv>=0.6.6
 RUN uv venv .venv && uv pip install .
 
 COPY . .
