--- a/server/pyproject.toml
+++ b/server/pyproject.toml
@@ -4,6 +4,8 @@ version = "1.0.0"
 description = "A LLM ongoing chat agent for learning"
 authors = [{ name = "Noah Ding", email = "noah@dingyipeng.com" }]
 dependencies = [
+    "azure-ai-documentintelligence>=1.0.1",
+    "azure-identity>=1.21.0",
     "bs4>=0.0.2",
     "fastapi>=0.115.11",
     "langchain>=0.3.20",
@@ -15,10 +17,13 @@ dependencies = [
     "mysql-connector-python>=9.2.0",
     "ollama>=0.4.7",
     "openai>=1.66.3",
+    "passlib>=1.7.4",
     "pdf2image>=1.17.0",
     "pydantic>=2.10.6",
+    "pyjwt>=2.10.1",
     "pypdf>=5.3.1",
     "python-dotenv>=1.0.1",
+    "python-multipart>=0.0.20",
     "qdrant-client>=1.13.3",
     "requests>=2.32.3",
     "uvicorn>=0.34.0",
