--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,7 +5,6 @@ stages:
 variables:
   SERVER_IMAGE: $CI_REGISTRY/peng-bot/peng-agent/server
   WEB_IMAGE: $CI_REGISTRY/peng-bot/peng-agent/front
-  VERSION: v1.3.1
 
 # Template for test builds (non-main branches)
 .test-build-template: &test-build
@@ -13,6 +12,8 @@ variables:
   stage: test
   before_script:
     - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
+  rules:
+    - if: $CI_COMMIT_TAG =~ "/^v\d+\.\d+\.\d+-nightly$/"
 
 # Template for production builds (main branch)
 .prod-build-template: &prod-build
@@ -21,15 +22,15 @@ variables:
   before_script:
     - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
   rules:
+    - if: $CI_COMMIT_TAG =~ "/^v\d+\.\d+\.\d+$/"
     - if: $CI_COMMIT_BRANCH == "main"
-    - if: $CI_COMMIT_TAG =~ /^v\d+\.\d+\.\d+$/
 
 # Server test build (x86)
 test-server-x64:
   <<: *test-build
   script:
-    - docker build --platform linux/amd64 -t $SERVER_IMAGE:$VERSION-nightly -f server/Dockerfile server/
-    - docker push $SERVER_IMAGE:$VERSION-nightly
+    - docker build --platform linux/amd64 -t $SERVER_IMAGE:$CI_COMMIT_TAG -f server/Dockerfile server/
+    - docker push $SERVER_IMAGE:$CI_COMMIT_TAG
   tags:
     - docker
 
@@ -37,8 +38,8 @@ test-server-x64:
 test-web-x64:
   <<: *test-build
   script:
-    - docker build --platform linux/amd64 -t $WEB_IMAGE:$VERSION-nightly -f web/Dockerfile web/
-    - docker push $WEB_IMAGE:$VERSION-nightly
+    - docker build --platform linux/amd64 -t $WEB_IMAGE:$CI_COMMIT_TAG -f web/Dockerfile web/
+    - docker push $WEB_IMAGE:$CI_COMMIT_TAG
   tags:
     - docker
 
@@ -46,9 +47,9 @@ test-web-x64:
 server-x64:
   <<: *prod-build
   script:
-    - docker build --platform linux/amd64 -t $SERVER_IMAGE:$VERSION -f server/Dockerfile server/
-    - docker tag $SERVER_IMAGE:$VERSION $SERVER_IMAGE:latest
-    - docker push $SERVER_IMAGE:$VERSION
+    - docker build --platform linux/amd64 -t $SERVER_IMAGE:$CI_COMMIT_TAG -f server/Dockerfile server/
+    - docker tag $SERVER_IMAGE:$CI_COMMIT_TAG $SERVER_IMAGE:latest
+    - docker push $SERVER_IMAGE:$CI_COMMIT_TAG
     - docker push $SERVER_IMAGE:latest
   tags:
     - docker
@@ -56,9 +57,9 @@ server-x64:
 server-arm:
   <<: *prod-build
   script:
-    - docker build --platform linux/arm64 -t $SERVER_IMAGE:$VERSION-arm -f server/Dockerfile server/
-    - docker tag $SERVER_IMAGE:$VERSION-arm $SERVER_IMAGE:latest-arm
-    - docker push $SERVER_IMAGE:$VERSION-arm
+    - docker build --platform linux/arm64 -t $SERVER_IMAGE:$CI_COMMIT_TAG-arm -f server/Dockerfile server/
+    - docker tag $SERVER_IMAGE:$CI_COMMIT_TAG-arm $SERVER_IMAGE:latest-arm
+    - docker push $SERVER_IMAGE:$CI_COMMIT_TAG-arm
     - docker push $SERVER_IMAGE:latest-arm
   tags:
     - docker-arm
@@ -67,9 +68,9 @@ server-arm:
 web-x64:
   <<: *prod-build
   script:
-    - docker build --platform linux/amd64 -t $WEB_IMAGE:$VERSION -f web/Dockerfile web/
-    - docker tag $WEB_IMAGE:$VERSION $WEB_IMAGE:latest
-    - docker push $WEB_IMAGE:$VERSION
+    - docker build --platform linux/amd64 -t $WEB_IMAGE:$CI_COMMIT_TAG -f web/Dockerfile web/
+    - docker tag $WEB_IMAGE:$CI_COMMIT_TAG $WEB_IMAGE:latest
+    - docker push $WEB_IMAGE:$CI_COMMIT_TAG
     - docker push $WEB_IMAGE:latest
   tags:
     - docker
@@ -77,9 +78,9 @@ web-x64:
 web-arm:
   <<: *prod-build
   script:
-    - docker build --platform linux/arm64 -t $WEB_IMAGE:$VERSION-arm -f web/Dockerfile web/
-    - docker tag $WEB_IMAGE:$VERSION-arm $WEB_IMAGE:latest-arm
-    - docker push $WEB_IMAGE:$VERSION-arm
+    - docker build --platform linux/arm64 -t $WEB_IMAGE:$CI_COMMIT_TAG-arm -f web/Dockerfile web/
+    - docker tag $WEB_IMAGE:$CI_COMMIT_TAG-arm $WEB_IMAGE:latest-arm
+    - docker push $WEB_IMAGE:$CI_COMMIT_TAG-arm
     - docker push $WEB_IMAGE:latest-arm
   tags:
     - docker-arm
