--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,6 +5,7 @@ stages:
 variables:
   SERVER_IMAGE: $CI_REGISTRY/peng-bot/peng-agent/server
   WEB_IMAGE: $CI_REGISTRY/peng-bot/peng-agent/front
+  VERSION: v1.4.3
 
 # Template for test builds (non-main branches)
 .test-build-template: &test-build
@@ -22,7 +23,6 @@ variables:
   before_script:
     - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
   rules:
-    - if: $CI_COMMIT_TAG =~ "/^v\d+\.\d+\.\d+$/"
     - if: $CI_COMMIT_BRANCH == "main"
 
 # Server test build (x86)
@@ -47,9 +47,9 @@ test-web-x64:
 server-x64:
   <<: *prod-build
   script:
-    - docker build --platform linux/amd64 -t $SERVER_IMAGE:$CI_COMMIT_TAG -f server/Dockerfile server/
-    - docker tag $SERVER_IMAGE:$CI_COMMIT_TAG $SERVER_IMAGE:latest
-    - docker push $SERVER_IMAGE:$CI_COMMIT_TAG
+    - docker build --platform linux/amd64 -t $SERVER_IMAGE:$VERSION -f server/Dockerfile server/
+    - docker tag $SERVER_IMAGE:$VERSION $SERVER_IMAGE:latest
+    - docker push $SERVER_IMAGE:$VERSION
     - docker push $SERVER_IMAGE:latest
   tags:
     - docker
@@ -57,9 +57,9 @@ server-x64:
 server-arm:
   <<: *prod-build
   script:
-    - docker build --platform linux/arm64 -t $SERVER_IMAGE:$CI_COMMIT_TAG-arm -f server/Dockerfile server/
-    - docker tag $SERVER_IMAGE:$CI_COMMIT_TAG-arm $SERVER_IMAGE:latest-arm
-    - docker push $SERVER_IMAGE:$CI_COMMIT_TAG-arm
+    - docker build --platform linux/arm64 -t $SERVER_IMAGE:$VERSION-arm -f server/Dockerfile server/
+    - docker tag $SERVER_IMAGE:$VERSION-arm $SERVER_IMAGE:latest-arm
+    - docker push $SERVER_IMAGE:$VERSION-arm
     - docker push $SERVER_IMAGE:latest-arm
   tags:
     - docker-arm
