--- a/server/pyproject.toml
+++ b/server/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "fastapi>=0.115.11",
     "google-genai>=1.8.0",
     "langchain>=0.3.20",
+    "langchain-azure-ai>=0.1.0",
     "langchain-community>=0.3.19",
     "langchain-core>=0.3.45",
     "langchain-ollama>=0.2.3",
@@ -18,6 +19,8 @@ dependencies = [
     "mysql-connector-python>=9.2.0",
     "ollama>=0.4.7",
     "openai>=1.66.3",
+    "openpyxl>=3.1.5",
+    "pandas>=2.2.3",
     "passlib>=1.7.4",
     "pdf2image>=1.17.0",
     "pydantic>=2.10.6",
