--- a/server/pyproject.toml
+++ b/server/pyproject.toml
@@ -1,14 +1,18 @@
 [project]
 name = "Peng-Agent"
-version = "1.0.0"
+version = "1.6.6"
 description = "A LLM ongoing chat agent for learning"
-authors = [{ name = "Noah Ding", email = "noah@dingyipeng.com" }]
+authors = [
+    { name = "Noah Ding", email = "noah@dingyipeng.com" },
+    { name = "Tena Walcott", email = "tw@tenawalcott.com" }
+]
 dependencies = [
     "azure-ai-documentintelligence>=1.0.1",
     "azure-identity>=1.21.0",
     "bs4>=0.0.2",
     "fastapi>=0.115.11",
     "google-genai>=1.8.0",
+    "importlib>=1.0.4",
     "langchain>=0.3.20",
     "langchain-azure-ai>=0.1.0",
     "langchain-community>=0.3.19",
@@ -40,3 +44,4 @@ build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.wheel]
 packages = ["api", "config", "models", "handlers", "services"]
+
