--- a/server/pyproject.toml
+++ b/server/pyproject.toml
@@ -1,12 +1,13 @@
 [project]
 name = "Peng-Agent"
-version = "1.6.6.1"
+version = "1.8.0"
 description = "A LLM ongoing chat agent for learning"
 authors = [
     { name = "Noah Ding", email = "noah@dingyipeng.com" },
     { name = "Tena Walcott", email = "tw@tenawalcott.com" }
 ]
 dependencies = [
+    "anthropic>=0.50.0",
     "azure-ai-documentintelligence>=1.0.1",
     "azure-identity>=1.21.0",
     "bs4>=0.0.2",
@@ -14,7 +15,6 @@ dependencies = [
     "google-genai>=1.8.0",
     "importlib>=1.0.4",
     "langchain>=0.3.20",
-    "langchain-azure-ai>=0.1.0",
     "langchain-community>=0.3.19",
     "langchain-core>=0.3.45",
     "langchain-ollama>=0.2.3",
