--- a/.gitignore
+++ b/.gitignore
@@ -379,3 +379,6 @@ $RECYCLE.BIN/
 
 # Custom rules (everything added below won't be overriden by 'Generate .gitignore File' if you use 'Update' option)
 
+*.xlsx
+*.csv
+*.pdf
