--- a/server/pyproject.toml
+++ b/server/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "Peng-Agent"
-version = "1.8.0"
+version = "2.0.2"
 description = "A LLM ongoing chat agent for learning"
 authors = [
     { name = "Noah Ding", email = "noah@dingyipeng.com" },
@@ -17,23 +17,26 @@ dependencies = [
     "langchain>=0.3.20",
     "langchain-community>=0.3.19",
     "langchain-core>=0.3.45",
-    "langchain-ollama>=0.2.3",
+    "langchain-google-genai>=2.1.4",
+    "langchain-openai>=0.3.17",
     "langchain-qdrant>=0.2.0",
     "minio>=7.2.15",
     "mysql-connector-python>=9.2.0",
-    "ollama>=0.4.7",
     "openai>=1.66.3",
     "openpyxl>=3.1.5",
     "pandas>=2.2.3",
     "passlib>=1.7.4",
     "pdf2image>=1.17.0",
+    "pillow>=11.1.0",
     "pydantic>=2.10.6",
     "pyjwt>=2.10.1",
+    "pymupdf>=1.25.5",
     "pypdf>=5.3.1",
     "python-dotenv>=1.0.1",
     "python-multipart>=0.0.20",
     "qdrant-client>=1.13.3",
     "requests>=2.32.3",
+    "tavily-python>=0.7.2",
     "uvicorn>=0.34.0",
 ]
 requires-python = ">=3.11"
