--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -1,10 +1,7 @@
 name: Build and Deploy
 
 on:
-    push:
-        branches: [ main ]
-    pull_request:
-        branches: [ main ]
+    [push, pull_request]
 
 env:
   REGISTRY: ghcr.io
