--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,6 +1,11 @@
-FROM python:3.11.11-slim-bookworm
+FROM python:3.12.3-slim-bookworm
 
 WORKDIR /app
+
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    build-essential \
+    libpq-dev \
+    && rm -rf /var/lib/apt/lists/*
 
 RUN pip install --no-cache-dir uv>=0.6.6
 
