uv ruff and check

--- a/server/pyproject.toml
+++ b/server/pyproject.toml
@@ -49,3 +49,6 @@ build-backend = "hatchling.build"
 [tool.hatch.build.targets.wheel]
 packages = ["api", "config", "models", "handlers", "services"]
 
+[tool.ruff]
+extend-exclude = ["archive/**"]
+
