--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -25,10 +25,10 @@ jobs:
       - name: Set up Python
         run: uv python install 3.11
 
-      - name: Install dependencies
-        run: apt-get update && apt-get install -y --no-install-recommends build-essential libpq-dev
+      - name: Install system dependencies
+        run: sudo apt-get update && sudo apt-get install -y --no-install-recommends build-essential libpq-dev
 
-      - name: Install dependencies
+      - name: Install Python dependencies
         run: uv sync
         working-directory: ./server
 
