--- a/server/pyproject.toml
+++ b/server/pyproject.toml
@@ -44,6 +44,7 @@ dependencies = [
     "playwright>=1.54.0",
     "lxml>=6.0.0",
     "email-to>=0.1.0",
+    "nest-asyncio>=1.6.0",
 ]
 requires-python = ">=3.12"
 
