Fix playwright: command not found Problem during Docker build
Related to Build #15 https://github.com/noahpengding/peng-agent/actions/runs/16589527438/job/46921606832?pr=69

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -7,13 +7,17 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     libpq-dev \
     && rm -rf /var/lib/apt/lists/*
 
-RUN pip install --no-cache-dir uv>=0.6.6
+RUN pip install --no-cache-dir playwright
+
+RUN playwright install chromium
+
+RUN pip uninstall -y playwright
+
+RUN pip install --no-cache-dir uv
 
 COPY pyproject.toml uv.lock ./
 
 RUN uv sync --locked
-
-RUN playwright install chromium
 
 COPY . .
 
