--- a/server/pyproject.toml
+++ b/server/pyproject.toml
@@ -47,6 +47,7 @@ dependencies = [
     "nest-asyncio>=1.6.0",
     "arize-phoenix-otel>=0.12.1",
     "openinference-instrumentation-langchain>=0.1.49",
+    "pytest-playwright>=0.7.0",
 ]
 requires-python = ">=3.12"
 
