--- a/web/package.json
+++ b/web/package.json
@@ -22,7 +22,8 @@
     "react-syntax-highlighter": "^15.6.1",
     "rehype-katex": "^7.0.1",
     "remark-gfm": "^4.0.1",
-    "remark-math": "^6.0.0"
+    "remark-math": "^6.0.0",
+    "update-browserslist-db": "^1.1.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
