--- a/server/pyproject.toml
+++ b/server/pyproject.toml
@@ -48,6 +48,8 @@ dependencies = [
     "arize-phoenix-otel>=0.12.1",
     "openinference-instrumentation-langchain>=0.1.49",
     "pytest-playwright>=0.7.0",
+    "sqlalchemy>=2.0.39",
+    "pymysql>=1.1.1",
 ]
 requires-python = ">=3.12"
 
