--- a/web/package.json
+++ b/web/package.json
@@ -14,6 +14,7 @@
     "@types/react-syntax-highlighter": "^15.5.13",
     "@vitejs/plugin-react": "^4.3.4",
     "axios": "^1.8.3",
+    "caniuse-lite": "^1.0.30001731",
     "eslint-plugin-prettier": "^5.5.3",
     "jwt-decode": "^4.0.0",
     "react": "^19.0.0",
