--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -88,7 +88,7 @@ jobs:
         uses: github/codeql-action/init@v3
         with:
           languages: ${{ matrix.language }}
-          queries: security-extended,quality
+          queries: security-extended,security-and-quality
           config: |
             paths:
               - ${{ matrix.path }}
