--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -7,7 +7,7 @@ env:
   REGISTRY: ghcr.io
   SERVER_IMAGE: ghcr.io/${{ github.repository }}/server
   WEB_IMAGE: ghcr.io/${{ github.repository }}/front
-  VERSION: v2.1.2
+  VERSION: v2.2.0
 
 jobs:
   # Code quality check - runs on all branches
@@ -43,10 +43,101 @@ jobs:
         run: uv tool run ruff format --check
         working-directory: ./server
 
+  # Web frontend lint check
+  web-lint:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Setup Bun
+        uses: oven-sh/setup-bun@v2
+        with:
+          bun-version: latest
+
+      - name: Install dependencies
+        run: bun install
+        working-directory: ./web
+
+      - name: Run ESLint
+        run: bun run lint
+        working-directory: ./web
+
+  # CodeQL security analysis - runs on all branches and outputs to Security tab
+  codeql-analysis:
+    name: CodeQL Security Analysis
+    runs-on: ubuntu-latest
+    permissions:
+      actions: read
+      contents: read
+      security-events: write
+    strategy:
+      fail-fast: false
+      matrix:
+        language: ['python', 'javascript']
+        include:
+          - language: python
+            path: './server'
+          - language: javascript
+            path: './web'
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Initialize CodeQL
+        uses: github/codeql-action/init@v3
+        with:
+          languages: ${{ matrix.language }}
+          queries: security-extended,security-and-quality
+          config: |
+            paths:
+              - ${{ matrix.path }}
+            paths-ignore:
+              - '**/node_modules'
+              - '**/dist'
+              - '**/build'
+              - '**/*.min.js'
+
+      - name: Setup Python for Python analysis
+        if: matrix.language == 'python'
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.11'
+
+      - name: Install uv for Python dependencies
+        if: matrix.language == 'python'
+        uses: astral-sh/setup-uv@v4
+        with:
+          version: "latest"
+
+      - name: Install Python dependencies with uv
+        if: matrix.language == 'python'
+        run: |
+          uv python install 3.11
+          uv sync
+        working-directory: ${{ matrix.path }}
+
+      - name: Setup Bun for JavaScript analysis
+        if: matrix.language == 'javascript'
+        uses: oven-sh/setup-bun@v2
+        with:
+          bun-version: latest
+
+      - name: Install JavaScript dependencies with Bun
+        if: matrix.language == 'javascript'
+        run: bun install
+        working-directory: ${{ matrix.path }}
+
+      - name: Perform CodeQL Analysis
+        uses: github/codeql-action/analyze@v3
+        with:
+          category: "/language:${{ matrix.language }}"
+          upload: true
+
   # Test builds for non-main branches (PRs)
   test-server-x64:
     if: github.ref != 'refs/heads/main'
-    needs: [ruff-check]
+    needs: [ruff-check, web-lint, codeql-analysis]
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -76,7 +167,7 @@ jobs:
 
   test-web-x64:
     if: github.ref != 'refs/heads/main'
-    needs: [ruff-check]
+    needs: [ruff-check, web-lint, codeql-analysis]
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -107,7 +198,7 @@ jobs:
   # Production builds for main branch
   server-x64:
     if: github.ref == 'refs/heads/main'
-    needs: [ruff-check]
+    needs: [ruff-check, web-lint, codeql-analysis]
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -139,7 +230,7 @@ jobs:
 
   web-x64:
     if: github.ref == 'refs/heads/main'
-    needs: [ruff-check]
+    needs: [ruff-check, web-lint, codeql-analysis]
     runs-on: ubuntu-latest
     permissions:
       contents: read
