--- a/server/pyproject.toml
+++ b/server/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "Peng-Agent"
-version = "2.1.2"
+version = "2.2.0"
 description = "A LLM ongoing chat agent for learning"
 authors = [
     { name = "Noah Ding", email = "noah@dingyipeng.com" },
@@ -12,7 +12,7 @@ dependencies = [
     "azure-identity>=1.21.0",
     "bs4>=0.0.2",
     "fastapi>=0.115.11",
-    "google-genai>=1.8.0",
+    "google-genai>=1.30.0",
     "importlib>=1.0.4",
     "langchain[openai]>=0.3.20",
     "langchain-community>=0.3.19",
@@ -48,6 +48,8 @@ dependencies = [
     "arize-phoenix-otel>=0.12.1",
     "openinference-instrumentation-langchain>=0.1.49",
     "pytest-playwright>=0.7.0",
+    "sqlalchemy>=2.0.39",
+    "pymysql>=1.1.1",
 ]
 requires-python = ">=3.12"
 
