--- a/web/package.json
+++ b/web/package.json
@@ -1,7 +1,7 @@
 {
   "name": "peng-agent-web",
   "private": true,
-  "version": "2.0.0",
+  "version": "2.2.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -14,6 +14,7 @@
     "@types/react-syntax-highlighter": "^15.5.13",
     "@vitejs/plugin-react": "^4.3.4",
     "axios": "^1.8.3",
+    "caniuse-lite": "^1.0.30001731",
     "eslint-plugin-prettier": "^5.5.3",
     "jwt-decode": "^4.0.0",
     "react": "^19.0.0",
@@ -22,7 +23,8 @@
     "react-syntax-highlighter": "^15.6.1",
     "rehype-katex": "^7.0.1",
     "remark-gfm": "^4.0.1",
-    "remark-math": "^6.0.0"
+    "remark-math": "^6.0.0",
+    "update-browserslist-db": "^1.1.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
