--- a/server/pyproject.toml
+++ b/server/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "Peng-Agent"
-version = "2.2.2"
+version = "2.2.3"
 description = "A LLM ongoing chat agent for learning"
 authors = [
     { name = "Noah Ding", email = "noah@dingyipeng.com" },
@@ -40,15 +40,14 @@ dependencies = [
     "requests>=2.32.3",
     "uvicorn>=0.34.0",
     "wikipedia>=1.4.0",
-    "langchain-tavily>=0.2.11",
-    "lxml>=6.0.0",
+    "lxml>=5.3.0",
     "email-to>=0.1.0",
     "nest-asyncio>=1.6.0",
     "arize-phoenix-otel>=0.12.1",
     "openinference-instrumentation-langchain>=0.1.49",
     "sqlalchemy>=2.0.39",
     "pymysql>=1.1.1",
-    "playwright>=1.55.0",
+    "crawl4ai>=0.7.4",
 ]
 requires-python = ">=3.12"
 
