--- a/test/docker-compose.yml
+++ b/test/docker-compose.yml
@@ -17,6 +17,6 @@ services:
       - "3306:3306"
     env_file:
       - ./.env
-    # volumes:
-    #   - ./data/mysql:/var/lib/mysql
+    volumes:
+      - ./data/mysql:/var/lib/mysql
 
