--- a/test/docker-compose_with_app.yml
+++ b/test/docker-compose_with_app.yml
@@ -3,6 +3,8 @@ services:
     image: qdrant/qdrant:latest
     container_name: qdrant
     restart: always
+    ports:
+      - "6333:6333"
     networks:
       - agent
     volumes:
