--- a/server/pyproject.toml
+++ b/server/pyproject.toml
@@ -48,6 +48,7 @@ dependencies = [
     "pymysql>=1.1.1",
     "crawl4ai>=0.7.4",
     "tavily-python>=0.7.11",
+    "paramiko>=4.0.0",
 ]
 requires-python = ">=3.12"
 
