--- a/web/package.json
+++ b/web/package.json
@@ -14,7 +14,7 @@
     "@types/react-syntax-highlighter": "^15.5.13",
     "@vitejs/plugin-react": "^4.3.4",
     "axios": "^1.8.3",
-    "caniuse-lite": "^1.0.30001731",
+    "caniuse-lite": "^1.0.30001741",
     "eslint-plugin-prettier": "^5.5.3",
     "jwt-decode": "^4.0.0",
     "react": "^19.0.0",
@@ -35,6 +35,7 @@
     "@typescript-eslint/parser": "^8.38.0",
     "@vitejs/plugin-react-swc": "^3.8.0",
     "autoprefixer": "^10.4.14",
+    "browserslist": "^4.26.0",
     "eslint": "^9.32.0",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.1.0",
