--- a/test/docker-compose.yml
+++ b/test/docker-compose.yml
@@ -12,11 +12,20 @@ services:
     image: mysql:lts
     container_name: peng-agent-mysql
     hostname: peng-agent
-    # restart: always
+    restart: always
     ports:
       - "3306:3306"
     env_file:
       - ./.env
     volumes:
       - /data/peng-agent/mysql:/var/lib/mysql
+
+  peng-agent-redis:
+    image: redis:latest
+    container_name: peng-agent-redis
+    restart: always
+    ports:
+      - "6379:6379"
+    volumes:
+      - /data/peng-agent/redis:/data
 
