--- a/server/pyproject.toml
+++ b/server/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "Peng-Agent"
-version = "2.2.6"
+version = "2.3.0"
 description = "A LLM ongoing chat agent for learning"
 authors = [
     { name = "Noah Ding", email = "noah@dingyipeng.com" },
@@ -14,11 +14,11 @@ dependencies = [
     "fastapi>=0.115.11",
     "google-genai>=1.30.0",
     "importlib>=1.0.4",
-    "langchain[openai]>=0.3.20",
-    "langchain-community>=0.3.19",
-    "langchain-core>=0.3.45",
-    "langchain-openai>=0.3.17",
-    "langchain-qdrant>=0.2.0",
+    "langchain[openai]>=1.0.3",
+    "langchain-community>=1.0.0a1",
+    "langchain-core>=1.0.3",
+    "langchain-openai>=1.0.2",
+    "langchain-qdrant>=1.1.0",
     "langgraph>=0.5.3",
     "minio>=7.2.15",
     "mysql-connector-python>=9.2.0",
