--- a/server/pyproject.toml
+++ b/server/pyproject.toml
@@ -8,6 +8,7 @@ authors = [
 ]
 dependencies = [
     "anthropic>=0.50.0",
+    "bcrypt>=4.2.0",
     "azure-ai-documentintelligence>=1.0.1",
     "azure-identity>=1.21.0",
     "bs4>=0.0.2",
@@ -15,7 +16,7 @@ dependencies = [
     "google-genai>=1.30.0",
     "importlib>=1.0.4",
     "langchain[openai]>=1.0.3",
-    "langchain-community>=1.0.0a1",
+    "langchain-community>=0.4.1",
     "langchain-core>=1.0.3",
     "langchain-openai>=1.0.2",
     "langchain-qdrant>=1.1.0",
@@ -26,7 +27,6 @@ dependencies = [
     "openai>=1.66.3",
     "openpyxl>=3.1.5",
     "pandas>=2.2.3",
-    "passlib>=1.7.4",
     "pdf2image>=1.17.0",
     "pillow>=11.1.0",
     "pydantic>=2.10.6",
@@ -61,5 +61,5 @@ build-backend = "hatchling.build"
 packages = ["api", "config", "models", "handlers", "services"]
 
 [tool.ruff]
-extend-exclude = ["archive/**"]
+extend-exclude = ["archive/**", "test/**"]
 
