--- a/web/package.json
+++ b/web/package.json
@@ -4,7 +4,7 @@
   "version": "2.3.0",
   "type": "module",
   "scripts": {
-    "dev": "bun --env-file=../test/.env run dev:serve",
+    "dev": "bun --env-file=../test/.env run vite",
     "dev:serve": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
