--- a/server/pyproject.toml
+++ b/server/pyproject.toml
@@ -50,6 +50,7 @@ dependencies = [
     "paramiko>=4.0.0",
     "langchain-mcp-adapters>=0.1.9",
     "langchain-community>=0.4.1",
+    "xai-sdk>=1.5.0",
 ]
 requires-python = ">=3.12"
 
