--- a/server/pyproject.toml
+++ b/server/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "Peng-Agent"
-version = "2.3.0"
+version = "2.4.0"
 description = "A LLM ongoing chat agent for learning"
 authors = [
     { name = "Noah Ding", email = "noah@dingyipeng.com" },
@@ -51,6 +51,7 @@ dependencies = [
     "langchain-mcp-adapters>=0.1.9",
     "langchain-community>=0.4.1",
     "xai-sdk>=1.5.0",
+    "openrouter>=0.1.3",
 ]
 requires-python = ">=3.12"
 
