--- a/server/pyproject.toml
+++ b/server/pyproject.toml
@@ -31,9 +31,9 @@ dependencies = [
     "pydantic>=2.10.6",
     "pyjwt>=2.10.1",
     "pymupdf>=1.25.5",
-    "pypdf>=6.6.0",
+    "pypdf>=6.6.2",
     "python-dotenv>=1.0.1",
-    "python-multipart>=0.0.20",
+    "python-multipart>=0.0.22",
     "qdrant-client>=1.13.3",
     "requests>=2.32.3",
     "uvicorn>=0.34.0",
@@ -59,6 +59,8 @@ dependencies = [
     "filelock>=3.20.3",
     "pyasn1>=0.6.2",
     "orjson>=3.11.5",
+    "protobuf>=6.33.5",
+    "pynacl>=1.6.2",
 ]
 requires-python = ">=3.12"
 
