--- a/server/pyproject.toml
+++ b/server/pyproject.toml
@@ -61,6 +61,7 @@ dependencies = [
     "orjson>=3.11.5",
     "protobuf>=6.33.5",
     "pynacl>=1.6.2",
+    "ddtrace>=4.3.1",
 ]
 requires-python = ">=3.12"
 
