--- a/server/pyproject.toml
+++ b/server/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "Peng-Agent"
-version = "2.3.2"
+version = "2.3.3"
 description = "A LLM ongoing chat agent for learning"
 authors = [
     { name = "Noah Ding", email = "noah@dingyipeng.com" },
@@ -31,9 +31,9 @@ dependencies = [
     "pydantic>=2.10.6",
     "pyjwt>=2.10.1",
     "pymupdf>=1.25.5",
-    "pypdf>=6.6.0",
+    "pypdf>=6.6.2",
     "python-dotenv>=1.0.1",
-    "python-multipart>=0.0.20",
+    "python-multipart>=0.0.22",
     "qdrant-client>=1.13.3",
     "requests>=2.32.3",
     "uvicorn>=0.34.0",
@@ -41,7 +41,6 @@ dependencies = [
     "lxml>=5.3.0",
     "email-to>=0.1.0",
     "nest-asyncio>=1.6.0",
-    "arize-phoenix-otel>=0.12.1",
     "openinference-instrumentation-langchain>=0.1.49",
     "sqlalchemy>=2.0.39",
     "pymysql>=1.1.1",
@@ -60,6 +59,9 @@ dependencies = [
     "filelock>=3.20.3",
     "pyasn1>=0.6.2",
     "orjson>=3.11.5",
+    "protobuf>=6.33.5",
+    "pynacl>=1.6.2",
+    "ddtrace>=4.3.1",
 ]
 requires-python = ">=3.12"
 
