--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -7,7 +7,7 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     libpq-dev \
     && rm -rf /var/lib/apt/lists/*
 
-RUN pip install --no-cache-dir uv, ddtrace
+RUN pip install --no-cache-dir uv ddtrace
 
 COPY pyproject.toml uv.lock ./
 
