--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -7,7 +7,7 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     libpq-dev \
     && rm -rf /var/lib/apt/lists/*
 
-RUN pip install --no-cache-dir uv
+RUN pip install --no-cache-dir uv ddtrace
 
 COPY pyproject.toml uv.lock ./
 
@@ -18,5 +18,9 @@ RUN uv run crawl4ai-setup
 COPY . .
 
 ENV PATH="/app/.venv/bin:$PATH"
+ARG DD_GIT_REPOSITORY_URL
+ARG DD_GIT_COMMIT_SHA
+ENV DD_GIT_REPOSITORY_URL=${DD_GIT_REPOSITORY_URL}
+ENV DD_GIT_COMMIT_SHA=${DD_GIT_COMMIT_SHA}
 
-CMD ["uv", "run", "--active", "/app/main.py"]
+CMD ["ddtrace-run", "python", "/app/main.py"]
