--- a/web/package.json
+++ b/web/package.json
@@ -1,7 +1,7 @@
 {
   "name": "peng-agent-web",
   "private": true,
-  "version": "2.3.5",
+  "version": "2.3.6",
   "type": "module",
   "scripts": {
     "dev": "bun --env-file=../test/.env run vite",
@@ -31,6 +31,8 @@
     "update-browserslist-db": "^1.1.3"
   },
   "devDependencies": {
+    "@datadog/browser-rum": "^6.27.0",
+    "@datadog/browser-rum-react": "^6.27.0",
     "@eslint/js": "^9.21.0",
     "@types/node": "^22.13.10",
     "@types/react": "^19.0.10",
