--- a/server/pyproject.toml
+++ b/server/pyproject.toml
@@ -27,7 +27,7 @@ dependencies = [
     "openpyxl>=3.1.5",
     "pandas>=2.2.3",
     "pdf2image>=1.17.0",
-    "pillow>=11.1.0",
+    "pillow>=12.1.1",
     "pydantic>=2.10.6",
     "pyjwt>=2.10.1",
     "pymupdf>=1.25.5",
@@ -62,6 +62,8 @@ dependencies = [
     "pynacl>=1.6.2",
     "ddtrace>=4.3.1",
     "langchain-text-splitters>=1.0.0",
+    "cryptography>=46.0.5",
+    "langsmith>=0.6.3",
 ]
 requires-python = ">=3.12"
 
