--- a/test/docker-compose.yml
+++ b/test/docker-compose.yml
@@ -8,6 +8,8 @@ services:
       - 6334:6334
     volumes:
       - /data/peng-agent/qdrant:/qdrant/storage
+    security_opt:
+      - no-new-privileges=true
 
   peng-agent-mysql:
     image: mysql:lts
@@ -20,6 +22,8 @@ services:
       - ./.env
     volumes:
       - /data/peng-agent/mysql:/var/lib/mysql
+    security_opt:
+      - no-new-privileges=true
 
   peng-agent-redis:
     image: redis:latest
@@ -29,4 +33,6 @@ services:
       - "6379:6379"
     volumes:
       - /data/peng-agent/redis:/data
+    security_opt:
+      - no-new-privileges=true
 
