--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -24,6 +24,9 @@ ARG DD_GIT_COMMIT_SHA
 ENV DD_GIT_REPOSITORY_URL=${DD_GIT_REPOSITORY_URL}
 ENV DD_GIT_COMMIT_SHA=${DD_GIT_COMMIT_SHA}
 
+ARG VERSION
+ENV VITE_APP_VERSION=${VERSION}
+
 EXPOSE 80
 
 CMD [ "/docker-entrypoint.sh" ]
