--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -7,7 +7,7 @@ env:
   REGISTRY: ghcr.io
   SERVER_IMAGE: ghcr.io/${{ github.repository }}/server
   WEB_IMAGE: ghcr.io/${{ github.repository }}/front
-  VERSION: v2.3.5
+  VERSION: v2.3.6
   GITHUB_REPOSITORY: ${{ github.repository }}
   GITHUB_COMMIT_SHA: ${{ github.sha }}
 
@@ -198,9 +198,10 @@ jobs:
           build-args: |
             DD_GIT_REPOSITORY_URL=${{ env.GITHUB_REPOSITORY }}
             DD_GIT_COMMIT_SHA=${{ env.GITHUB_COMMIT_SHA }}
+            VERSION=${{ env.VERSION }}-nightly
 
   # Production builds for main branch
-  server-x64:
+  server:
     if: github.ref == 'refs/heads/main'
     needs: [ruff-check, web-lint, codeql-analysis]
     runs-on: ubuntu-latest
@@ -226,7 +227,7 @@ jobs:
         with:
           context: ./server
           file: ./server/Dockerfile
-          platforms: linux/amd64
+          platforms: linux/amd64, linux/arm64
           push: true
           tags: |
             ${{ env.SERVER_IMAGE }}:${{ env.VERSION }}
@@ -235,7 +236,7 @@ jobs:
             DD_GIT_REPOSITORY_URL=${{ env.GITHUB_REPOSITORY }}
             DD_GIT_COMMIT_SHA=${{ env.GITHUB_COMMIT_SHA }}
 
-  web-x64:
+  web:
     if: github.ref == 'refs/heads/main'
     needs: [ruff-check, web-lint, codeql-analysis]
     runs-on: ubuntu-latest
@@ -261,7 +262,7 @@ jobs:
         with:
           context: ./web
           file: ./web/Dockerfile
-          platforms: linux/amd64
+          platforms: linux/amd64, linux/arm64
           push: true
           tags: |
             ${{ env.WEB_IMAGE }}:${{ env.VERSION }}
@@ -269,3 +270,4 @@ jobs:
           build-args: |
             DD_GIT_REPOSITORY_URL=${{ env.GITHUB_REPOSITORY }}
             DD_GIT_COMMIT_SHA=${{ env.GITHUB_COMMIT_SHA }}
+            VERSION=${{ env.VERSION }}
