--- a/test/docker-compose.yml
+++ b/test/docker-compose.yml
@@ -25,14 +25,10 @@ services:
     security_opt:
       - no-new-privileges=true
 
-  peng-agent-redis:
-    image: redis:latest
-    container_name: peng-agent-redis
+  crawl4ai:
+    image: unclecode/crawl4ai:latest
+    container_name: crawl4ai
     restart: always
     ports:
-      - "6379:6379"
-    volumes:
-      - /data/peng-agent/redis:/data
-    security_opt:
-      - no-new-privileges=true
-
+      - "11235:11235"
+    shm_size: 1g
