fix: Front End Datadog setup

--- a/web/package.json
+++ b/web/package.json
@@ -4,7 +4,7 @@
   "version": "2.3.6",
   "type": "module",
   "scripts": {
-    "dev": "bun --env-file=../test/.env run vite",
+    "dev": "bun --env-file=../test/front.env run vite",
     "dev:serve": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
