--- a/server/pyproject.toml
+++ b/server/pyproject.toml
@@ -9,8 +9,6 @@ authors = [
 dependencies = [
     "anthropic>=0.50.0",
     "bcrypt>=4.2.0",
-    "azure-ai-documentintelligence>=1.0.1",
-    "azure-identity>=1.21.0",
     "bs4>=0.0.2",
     "fastapi>=0.115.11",
     "google-genai>=1.30.0",
@@ -51,7 +49,6 @@ dependencies = [
     "xai-sdk>=1.5.0",
     "openrouter>=0.1.3",
     "urllib3>=2.6.3",
-    "azure-core>=1.38.0",
     "mcp>=1.23.0",
     "aiohttp>=3.13.3",
     "brotli>=1.2.0",
@@ -64,6 +61,7 @@ dependencies = [
     "langchain-text-splitters>=1.0.0",
     "cryptography>=46.0.5",
     "langsmith>=0.6.3",
+    "crawl4ai>=0.8.0",
 ]
 requires-python = ">=3.12"
 
